fix: fix placement of overflow-y rule for fixed-header

--- a/dist-css/fixed-header.css
+++ b/dist-css/fixed-header.css
@@ -1,5 +1,8 @@
-.lean-table__header-cell {
+.lean-table__table {
   overflow-y: auto;
+}
+
+.lean-table__header-cell {
   position: sticky;
   top: 0;
   z-index: 100;
